[tool.poetry]

name = "grwifi"
version = "1.0"
description = "Map of WiFi access points in Grand Rapids, MI."
authors = ["Jace Browning <jacebrowning@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]

python = "^3.9"

sappy = "^1.1"

[build-system]

requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
